--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,9 +17,11 @@
 @import "components/main";
 @import "components/nav";
 @import "components/footer";
+@import "components/spotlight";
 @import "components/logos";
 @import "components/format";
 
 @import "pages/home";
+@import "pages/about";
 
 @import "utilities";
