--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -35,6 +35,7 @@ input:-webkit-autofill { background-color: transparent !important }
 q { quotes: "“" "”" "‘" "’" }
 
 // Wrapper
+.Header, .Main, .Sub, .Footer { padding-left: 12px; padding-right: 12px }
 .Wrapper {
   width: 100%;
   max-width: $Reponsive__desktop--min;
