--- a/resources/assets/sass/components/_buttons.scss
+++ b/resources/assets/sass/components/_buttons.scss
@@ -1,30 +1,44 @@
-$Button__default--height: 55px;
+$Button__default--height: 45px;
 
 .Button {
   @include regular;
-  transition: background .2s;
+  transition: all .3s;
   height: $Button__default--height;
   margin: 0;
   padding: 0 26px;
   border: 0 ;
-  background: red;
-  color: #000 !important;
+  background: $Color__black--darkest;
+  color: #fff !important;
   text-align: center;
   text-decoration: none !important;
   line-height: $Button__default--height;
-  font-size: 18px;
+  font-size: 16px;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
   appearance: none;
   user-select: none;
   display: inline-block;
-  text-transform: uppercase;
   position: relative;
   overflow: hidden;
   &:hover {
     background: blue
   }
+  
+  // Colours
+  &--box {
+    background: transparent;
+    color: #fff !important;
+    border: solid 1px #fff;
+    border-radius: 4px;
+    line-height: #{$Button__default--height - 2};
+    opacity: .4;
+    &:hover {
+      background: transparent;
+      opacity: .8
+    }
+  }
+  
 }
 
 button.Button, input.Button { line-height: normal !important }
