--- a/resources/assets/sass/components/_nav.scss
+++ b/resources/assets/sass/components/_nav.scss
@@ -50,6 +50,10 @@
 
 // States
 .About .Primary__link--about { color: $Color__orange__brand !important }
+.Products .Primary__link--products { color: $Color__orange__brand !important }
+.Agency .Primary__link--agency { color: $Color__orange__brand !important }
+.Thinking .Primary__link--thinking { color: $Color__orange__brand !important }
+.COntact .Primary__link--contact { color: $Color__orange__brand !important }
 
 //
 // Responsive
