--- a/resources/assets/sass/pages/_products.scss
+++ b/resources/assets/sass/pages/_products.scss
@@ -1,5 +1,11 @@
 .Products {
   
-  
+  .Roles {
+    &__strap {
+      margin: 0 0 24px;
+      font-size: 26px;
+      text-align: center
+    }
+  }
   
 }
