Agency page complete

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,6 +8,9 @@ $Color__black--darker: #333;
 // Oranges
 $Color__orange__brand: #ed4b14;
 
+// Blues
+$Color__blue--thinmartian: #222E46;
+
 // Greys
 $Color__grey--darker: #6b6b6b;
 $Color__grey--medium: #d3d3d3;
