--- a/resources/assets/sass/pages/_products.scss
+++ b/resources/assets/sass/pages/_products.scss
@@ -2,10 +2,87 @@
   
   .Roles {
     &__strap {
-      margin: 0 0 24px;
+      margin: 0 0 54px;
       font-size: 26px;
       text-align: center
     }
   }
   
+  .Product {
+    margin: 0 0 24px;
+    padding: 0 0 34px;
+    border-bottom: solid 1px $Color__grey--medium;
+    align-items: center;
+    display: flex;
+    &:last-child { padding: 0; margin: 0; border: 0 }
+    &__image {
+      flex-basis: 300px;
+      flex-shrink: 0;
+      img { max-width: 90% }
+    }
+    &__details {
+      flex-grow: 1;
+    }
+    &__title {
+      @include light;
+      margin: 0 0 18px;
+      font-size: 28px;
+      span {
+        @include regular;
+        margin-left: 8px;
+        padding-left: 22px;
+        font-size: 16px;
+        position: relative;
+        &:before {
+          content: '';
+          width: 8px;
+          height: 8px;
+          background: $Color__black--darker;
+          border-radius: 50%;
+          transform: translateY(-50%);
+          left: 0;
+          top: 50%;
+          position: absolute
+        }
+      }
+    }
+  }
+  
+}
+
+//
+// Responsive
+// 
+@include respond(all-devices) {
+  .Products {
+    .Product {
+      &__image { flex-basis: 270px }
+    }
+  }
+}
+@include respond(all-phones) {
+  .Products {
+    .Product {
+      flex-direction: column;
+      text-align: center;
+      &__image {
+        flex-basis: auto;
+      }
+      &__details {
+        
+      }
+    }
+  }
+}
+@include respond(phone-portrait) {
+  .Products {
+    .Product {
+      &__title span {
+        margin: 0;
+        padding: 0;
+        display: block;
+        &:before { display: none }
+      }
+    }
+  }
 }
