--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -11,6 +11,9 @@ $Color__orange__brand: #ed4b14;
 // Blues
 $Color__blue--thinmartian: #222E46;
 
+// Reds
+$Color__red--error: #f17373;
+
 // Greys
 $Color__grey--darker: #6b6b6b;
 $Color__grey--medium: #d3d3d3;
