--- a/resources/assets/sass/pages/_admin.scss
+++ b/resources/assets/sass/pages/_admin.scss
@@ -25,6 +25,28 @@
   }
   
   /**
+   * Alerts
+   */
+  .Alert {
+    @include light;
+    margin: 0 0 24px;
+    padding: 12px;
+    border: solid 1px #fff;
+    font-size: 14px;
+    background: $Color__black--darkest;
+    text-align: center;
+    color: #fff;
+    &--success {
+      border-color: $Color__status--live;
+      background: #336633
+    }
+    &--error {
+      border-color: $Color__red--error;
+      background: #663333
+    }
+  }
+  
+  /**
    * Splash style pages (login, password etc). These pages contain no
    * header or footer and just centralised content
    */
@@ -145,7 +167,7 @@
   .Status {
     &--live, &--active, &--approved { color: $Color__status--live }
     &--pending { color: $Color__status--pending }
-    &--hidden, &--archived, &--inactive { color: $Color__status--hidden }
+    &--hidden, &--archived, &--inactive, &--disabled { color: $Color__status--hidden }
   }
   
   /**
@@ -284,5 +306,44 @@
       }
     }
   }
+  
+  /**
+   * Form
+   */
+  .AdminForm {
+    &__row {
+      margin: 0 0 18px;
+      justify-content: space-between;
+      align-items: center;
+      display: flex;
+      &--top {
+        align-items: flex-start;
+      }
+    }
+    &__label, &__field {
+      flex-shrink: 0;
+    }
+    &__label {
+      @include light;
+      flex-basis: 25%;
+    }
+    &__field {
+      flex-grow: 1;
+      margin-left: 24px;
+    }
+    &__control {
+      @include light;
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      border-radius: 0;
+      appearance: none;
+    }
+    &__buttons {
+      margin-top: 12px;
+      margin-left: calc(25% + 24px)
+    }
+  }
+  
   
 }
