Blog article cms done apart from media

--- a/resources/assets/sass/pages/_admin.scss
+++ b/resources/assets/sass/pages/_admin.scss
@@ -312,6 +312,11 @@
    * Form
    */
   .AdminForm {
+    &__sep {
+      margin: 0 0 36px;
+      padding: 18px 0 0;
+      border-bottom: solid 1px $Color__black--darker;
+    }
     &__row {
       margin: 0 0 18px;
       justify-content: space-between;
@@ -331,6 +336,10 @@
     &__field {
       flex-grow: 1;
       margin-left: 24px;
+      &--date {
+        align-items: center;
+        display: flex
+      }
     }
     &__control {
       @include light;
@@ -339,6 +348,15 @@
       font-size: 18px;
       border-radius: 0;
       appearance: none;
+      &--day, &--month, &--year, &--hour, &--minute { width: auto }
+      &--day { min-width: 60px }
+      &--month { min-width: 170px }
+      &--year { min-width: 110px }
+      &--hour { min-width: 60px; margin-right: 12px }
+      &--minute { min-width: 60px }
+      &--space { margin-left: 12px }
+      &--doublespace { margin-left: 34px }
+      &:first-child { margin-left: 0 !important }
     }
     &__buttons {
       width: 100%;
@@ -348,5 +366,13 @@
     }
   }
   
+  //
+  // Overrides
+  // 
+  
+  .editor-toolbar a {
+    color: #fff !important;
+    &:hover, &.active { color: #000 !important }
+  }
   
 }
