--- a/resources/assets/sass/pages/_admin.scss
+++ b/resources/assets/sass/pages/_admin.scss
@@ -356,6 +356,10 @@
       &--minute { min-width: 60px }
       &--space { margin-left: 12px }
       &--doublespace { margin-left: 34px }
+      &--file {
+        padding-left: 0;
+        padding-right: 0;
+      }
       &:first-child { margin-left: 0 !important }
     }
     &__buttons {
