--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,8 +27,10 @@
 @import "pages/products";
 @import "pages/agency";
 @import "pages/contact";
+@import "pages/thinking";
 @import "pages/admin";
 
 @import "utilities";
 
 @import "vendor/slick";
+@import "vendor/chosen";
