--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -7,7 +7,7 @@ $Color__black--darker: #333;
 $Color__black--lightest: #555;
 
 // Oranges
-$Color__orange__brand: #ed4b14;
+$Color__orange--brand: #ed4b14;
 
 // Blues
 $Color__blue--thinmartian: #222E46;
