--- a/resources/assets/sass/components/_format.scss
+++ b/resources/assets/sass/components/_format.scss
@@ -2,7 +2,7 @@
   font-size: 16px;
   line-height: 27px;
   
-  ul, ol { margin-left: 34px }
+  ul, ol { margin-left: 34px; margin-bottom: 24px}
   ul { list-style: disc }
   ol { list-style: decimal }
   blockquote {
