--- a/resources/assets/sass/pages/_admin.scss
+++ b/resources/assets/sass/pages/_admin.scss
@@ -327,14 +327,15 @@
       }
     }
     &__label, &__field {
-      flex-shrink: 0;
+      //flex-shrink: 0;
     }
     &__label {
       @include light;
-      flex-basis: 25%;
+      width: 25%;
     }
     &__field {
-      flex-grow: 1;
+      width: 75%;
+      //flex-grow: 1;
       margin-left: 24px;
       &--date {
         align-items: center;
