Site nearly done

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -63,4 +63,4 @@ $Reponsive__phone-portrait--max: ($Reponsive__phone-landscape--min - 1); // 479p
 /*
  * Strings and settings
  */
-$Path__cdn: "https://fp-customer-codegent.s3.amazonaws.com/www/";
+$Path__cdn: "https://d2aeaz3rf1fwmv.cloudfront.net/www/";
