--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,6 +21,7 @@
 @import "components/logos";
 @import "components/format";
 @import "components/carousels";
+@import "components/tags";
 
 @import "pages/home";
 @import "pages/about";
