--- a/resources/assets/sass/pages/_thinking.scss
+++ b/resources/assets/sass/pages/_thinking.scss
@@ -16,7 +16,9 @@
     font-size: 24px;
   }
   
+  .Feed { height: calc(100vh - #{$Header__height--desktop} - 48px) }
   .Blog {
+    padding-bottom: 34px;
     display: flex
   }
   .Content {
@@ -49,6 +51,7 @@
       padding: 0 0 18px;
       border-bottom: solid 1px $Color__grey--lightest;
       font-size: 14px;
+      overflow: hidden;
       &:last-child {
         margin: 0;
         padding: 0; 
@@ -106,9 +109,6 @@
     &__details, &__date { padding: 4px 0 0 }
     &__details { flex-grow: 1 }
     &__date {
-      //align-self: flex-start;
-      //text-align: right;
-      //flex-grow: 0;
       right: 0;
       top: 0;
       position: absolute;
@@ -140,21 +140,7 @@
         display: flex
       }
     }
-    &__body {
-      
-    }
   }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
   
 }
 
@@ -188,6 +174,7 @@
 @include respond(all-phones) {
   .Thinking {
     &__subtitle { font-size: 20px }
+    .Feed { height: calc(100vh - #{$Header__height--mobile}) }
     .Article {
       &__image {
         width: 200px;
@@ -205,6 +192,9 @@
         height: 180px;
         margin: 0 0 12px;
       }
+    }
+    .Author {
+      &__date { top: -24px }
     }
     .Show {
       &__links {
