--- a/resources/assets/sass/pages/_thinking.scss
+++ b/resources/assets/sass/pages/_thinking.scss
@@ -116,7 +116,7 @@
   }
   
   .Show {
-    &__image {
+    &__image, &__youtube {
       width: 100%;
       margin: 0 0 24px;
       display: block
