Plenty of changes, migrations, and change to how images work on blog

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,7 @@
 @import "components/format";
 @import "components/carousels";
 @import "components/tags";
+@import "components/paging";
 
 @import "pages/home";
 @import "pages/about";
