Plenty of changes

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,7 @@
 @import "components/carousels";
 @import "components/tags";
 @import "components/paging";
+@import "components/overlay";
 
 @import "pages/home";
 @import "pages/about";
