--- a/resources/assets/sass/pages/_thinking.scss
+++ b/resources/assets/sass/pages/_thinking.scss
@@ -121,10 +121,13 @@
   }
   
   .Show {
-    &__image, &__youtube {
+    &__media, &__youtube {
       width: 100%;
       margin: 0 0 24px;
-      display: block
+      display: block;
+      video {
+        width: 100%;
+      }
     }
     &__links {
       margin: 0 0 24px;
@@ -202,9 +205,7 @@
       &__date { top: -24px }
     }
     .Show {
-      &__links {
-        flex-direction: column;
-      }
+      &__links { flex-direction: column }
       &__share { margin: 0 0 8px }
     }
   }
